Cria tela de condominio

--- a/src/app/portal/condominiums/condominiums.component.html
+++ b/src/app/portal/condominiums/condominiums.component.html
@@ -39,7 +39,7 @@
                             [text]="true"
                             label="Visualizar"
                             icon="pi pi-eye" 
-                            (click)="openCondominium()">
+                            (click)="openCondominium(condominium)">
                         </button>
                     </td>
                     <td>
