--- a/src/app/portal/neighborhoods/neighborhoods.component.html
+++ b/src/app/portal/neighborhoods/neighborhoods.component.html
@@ -1,4 +1,7 @@
-
+<!-- Overlay De Carregamento -->
+<app-loading-overlay
+  *ngIf="isLoading">
+</app-loading-overlay>
 <!-- Pagina Principal -->
 <div
     id="page"
