--- a/src/app/portal/condominiums/condominiums.component.html
+++ b/src/app/portal/condominiums/condominiums.component.html
@@ -21,11 +21,13 @@
                 class="w-full mb-3"
                 type="text" 
                 pInputText 
-                placeholder="Buscar" />
+                placeholder="Buscar"
+                [(ngModel)]="searchFilter"
+                (input)="filterCondominiums()"/>
         </p-iconField>
         <p-table
             class="pb-3"
-            [value]="condominiumsItems"
+            [value]="filteredCondominiums"
             [columns]="condominiumsColumns"
             styleClass="p-datatable-sm p-datatable-striped">
             <ng-template 
@@ -61,9 +63,10 @@
                         {{ condominium.condominio }}
                     </td>
                     <td>
-                        <p-progressBar [value]="condominium.utilization" />
+                        <p-tag 
+                            [value]="condominium['status_medicao']" 
+                            [severity]="getStatus(condominium['status_medicao'])" />
                     </td>
-
                 </tr>
             </ng-template>
         </p-table>
