--- a/src/app/portal/condominiums/condominiums.component.html
+++ b/src/app/portal/condominiums/condominiums.component.html
@@ -8,7 +8,7 @@
     id="page"
     class="pl-3 pr-3 background">
     <h1>
-        Condominios
+        {{regionName}}
     </h1>
     <p-card
         class="card">
