--- a/src/app/portal/sync/sync.component.html
+++ b/src/app/portal/sync/sync.component.html
@@ -15,6 +15,6 @@
         pRipple
         label="Sincronizar Pendencias"
         icon="pi pi-sync"
-        (click)="syncPendencies()">
+        (click)="updateAllFailedReadingItems()">
     </button>
 </div>
