--- a/src/app/portal/condominium/condominium.component.html
+++ b/src/app/portal/condominium/condominium.component.html
@@ -41,10 +41,10 @@
                         [ngClass]="{ 'border-top-1 surface-border': !first }">
 
                         <!-- Número do Apartamento Centralizado no Topo -->
-                        <h3 
+                        <h2 
                             class="text-center text-900 font-medium w-full mb-4">
-                            Economia Nº {{item['economia']}}
-                        </h3>
+                            Unidade Nº {{item['economia']}}
+                        </h2>
 
                         <!-- Blocos de Leitura da Água e do Gás -->
                         <div
