--- a/src/app/portal/condominiums/condominiums.component.html
+++ b/src/app/portal/condominiums/condominiums.component.html
@@ -2,14 +2,48 @@
 <app-loading-overlay
   *ngIf="isLoading">
 </app-loading-overlay>
+<p-scrollTop  />
 
 <!-- Pagina Principal -->
 <div
     id="page"
     class="pl-3 pr-3 background">
+    <p-breadcrumb 
+        class="max-w-full mt-3" 
+        [model]="items">
+        <ng-template 
+            pTemplate="item" 
+            let-item>
+            <ng-container 
+                *ngIf="item.routerLink; else elseBlock">
+                <a 
+                    [routerLink]="item.routerLink" 
+                    class="p-menuitem-link">
+                    <span 
+                        [ngClass]="[item.icon ? item.icon : '', 'text-color']">
+                    </span>
+                    <span 
+                        class="text-primary font-semibold">
+                        {{ item.label }}
+                    </span>
+                </a>
+            </ng-container>
+            <ng-template 
+                #elseBlock>
+                <span 
+                    class="text-color">
+                    {{ item.label }}
+                </span>
+            </ng-template>
+        </ng-template>
+    </p-breadcrumb>
     <h1>
         {{regionName}}
     </h1>
+    <div
+        class="text-lg font-medium text-900 mb-3">
+        Selecionando uma linha, voce se posiciona no registro!
+    </div>
     <p-card
         class="card">
         <p-iconField 
@@ -29,14 +63,12 @@
             class="pb-3"
             [value]="filteredCondominiums"
             [columns]="condominiumsColumns"
-            styleClass="p-datatable-sm p-datatable-striped">
+            styleClass="p-datatable-xl p-datatable-striped"
+            scrollHeight="600px" >
             <ng-template 
                 pTemplate="header" 
                 let-columns>
                 <tr>
-                    <th
-                        style="width:10%">
-                    </th>
                     <th 
                         *ngFor="let col of columns">
                         {{ col.label }}
@@ -47,18 +79,8 @@
             <ng-template 
                 pTemplate="body" 
                 let-condominium>
-                <tr>
-                    <td>
-                        <button 
-                            type="button" 
-                            pButton
-                            pRipple
-                            [text]="true"
-                            label="Visualizar"
-                            icon="pi pi-eye" 
-                            (click)="openCondominium(condominium)">
-                        </button>
-                    </td>
+                <tr
+                    (click)="openCondominium(condominium)">
                     <td>
                         {{ condominium.condominio }}
                     </td>
