--- a/src/app/authentication/log-in/log-in.component.html
+++ b/src/app/authentication/log-in/log-in.component.html
@@ -13,7 +13,7 @@
     src="./assets/images/logo.png"
     height="200px">
   <p-card 
-    class="log-in-card mb-3" 
+    class="log-in-card mb-3 mt-6" 
     header="Login">
     <div 
       class="p-fluid">
