--- a/src/app/portal/condominium/condominium.component.html
+++ b/src/app/portal/condominium/condominium.component.html
@@ -4,6 +4,39 @@
 </app-loading-overlay>
 <!-- Scroll Top-->
 <p-scrollTop />
+<!-- Modal para fotos -->
+<p-dialog
+    [(visible)]="isPhotoModalOpen"
+    [modal]="true"
+    header="Medidor Da Unidade {{openedUnityInPhotoModal['economia']}}"
+    [style]="{ width: '85%'}"
+    closable="true"
+    (onHide)="onHidePhotoModal()">
+    <div 
+        id="photos" 
+        class="flex flex-column align-items-center gap-3">
+        <!-- Foto "Vinda na economia" -->
+        <img
+            *ngIf="newPhoto == null"
+            [src]="newPhoto"
+            class="w-full mt-3 photo-border"
+            height="250px"/>
+        <!-- Nova foto tirada com a camera -->
+        <img
+            *ngIf="newPhoto != null"
+            [src]="newPhoto"
+            alt="Logo"
+            class="w-full mt-3 photo-border"
+            height="250px"/>
+        <!-- Botão para substituir foto -->
+        <p-button
+            class="mt-3"
+            label="Substituir Foto"
+            icon="pi pi-edit"
+            (onClick)="openCamera()">
+        </p-button>
+    </div>
+</p-dialog>
 
 <!-- Página Principal -->
 <div
@@ -113,7 +146,7 @@
                                 </div>
                                 <p-tag
                                     *ngIf="item['leitura_atual_agua'] == null"
-                                    class="mt-2"
+                                    class="mt-1"
                                     severity="danger" 
                                     value="Pendente"/>
                                 <!-- Alinhamento à esquerda para o campo de entrada -->
@@ -158,7 +191,7 @@
                                 </div>
                                 <p-tag
                                     *ngIf="item['leitura_atual_gas'] == null"
-                                    class="mt-2"
+                                    class="mt-1"
                                     severity="danger" 
                                     value="Pendente"/>
                                 <p-floatLabel
@@ -167,6 +200,7 @@
                                         id="username"
                                         type="text"
                                         pInputText
+                                        inputmode="numeric"
                                         style="width: 8em;"
                                         (blur)="readingChanged(item, $event, 'gas')" 
                                         [(ngModel)]="item['leitura_atual_gas']"/>
@@ -177,6 +211,11 @@
                                 </p-floatLabel>
                             </div>
                         </div>
+                        <p-button
+                            label="Fotos"
+                            icon="pi pi-camera"
+                            (onClick)="showPhotoModal(item)">
+                        </p-button>
                     </div>
                 </div>
             </ng-template>
